--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-
+        <div class="main">
+          
+        </div>
 
       <script src="app/js/index.js"></script>
 </body>
